@@ -97,3 +97,4 @@
 	- floodserv shouldn't insert an AKILL twice. (#37)
 	- make MLOCK accept -l and -k, turn off AUTOLIMIT if -l set. (#32)
 	- Remove stray tab from chanserv access add help.
+	- the part cb may send a null channel don't let FS crash. (#43)
